2014-10-17  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (v_eof): Bugfix: we are at EOF not only when
	the remaining data is nil but when it is (nil). This
	happens for interactive streams.

2014-10-17  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (dest_bind): Remove the restriction of not allowing
	@(expr ...) and @var on the left side of a bind. This
	is useful, and necessary for @(line @(lisp expr)) to work:
	matching computed line numbers and character positions.

	* txr.1: Document use of Lisp on left hand side of bind,
	that there is a restriction on the left hand side of a set,
	and that Lisp can be used in a line or chr directive for
	computed matches.

2014-10-17  Kaz Kylheku  <kaz@kylheku.com>

	* HACKING: New section Type Safety.
	Table of contents regenerated with line numbers.

	* HACKING-toc.txr: New file.

2014-10-17  Kaz Kylheku  <kaz@kylheku.com>

	Converting cast expressions to macros that are retargetted
	to C++ style casts when compiling as C++.

	* lib.h (strip_qual, convert, coerce): New casting macros.
	(TAG_MASK, tag, type, wli_noex, auto_str, static_str,
	litptr, num_fast, chr, lit_noex, nil, nao): Use cast macros.

	* arith.c (mul, isqrt_fixnum, bit): Use cast macros.

	* configure (INT_PTR_MAX): Define using cast macro.

	* debug.c (debug_init): Use cast macro.

	* eval.c (do_eval, expand_macro, reg_op, reg_mac, eval_init):
	Use cast macros.

	* filter.c (filter_init): Use cast macro.

	* gc.c (more, mark_obj, in_heap, mark, sweep_one, unmark): Use
	cast macros.

	* hash.c (hash_double, equal_hash, eql_hash, hash_equal_op,
	hash_hash_op, hash_print_op, hash_mark, make_hash, make_similar_hash,
	copy_hash, gethash_c, gethash, gethash_f, gethash_n, remhash,
	hash_count, get_hash_userdata, set_hash_userdata, hash_iter_destroy,
	hash_iter_mark, hash_begin, hash_uni, hash_diff, hash_isec): Use
	cast macros.

	* lib.c (code2type, chk_malloc, chk_malloc_gc_more, chk_calloc,
	chk_realloc, chk_strdup, num, c_num, string, mkstring, mkustring,